* Cache file support when "irrd" protocol is used. Thanks to
  Hagen Boehm for the implementation.
* Build fixes for OS X.
* Build fix for gcc 4.2 (default on Debian and Ubuntu these days).
* Explicit check for flex and bison in configure.

4.8.5

Bug fix for RPSLng queries on IRRd servers.

Better support for 64-bit compilation.

Integrated a number of fixes from the NetBSD port as proposed by 
Havard Eidnes.

* Numerous compiler fixes:
  o src/config.h.in is amended to conditionally define __P(x).  Use
    __P() instead of _G_ARGS() in various places.
  o Many, many files are patched to replace occurrances of _G_uint32_t
    with uint32_t. The former is in the host compiler implementation's
    name space, and as far as I know, a library writer has no business
    assuming anything about the types defined in that name space
    (names starting with a single underscore character).
  o Instead of including <_G_config.h>, use <config.h>, and add
    includes of e.g. <sys/types.h> where needed.
  o A few troublesome casts removed which newer C++ compilers balk at.

* JunOS support enabled & fixed

* Portability to Dragonfly BSD (treat as FreeBSD)

* Bugfix for Cisco export

4.8.4

* A number of runtime problems which caused crashes were reported, and
  these have been fixed. Thanks to Hagen Boehm for discovering them.

4.8.3

A set of patches collected by Hagen Boehm was applied:

* whois.apnic.net server problem
  APNIC's whois server (RIPE NCC software with RPSS functions
  disabled) has changed syntax of some embedded comments in a way that
  violates the protocol assumptions in IRRToolSet 4.8.2
  (required/allowed "empty lines" ~ "\n\n" in the context of "%"
  comment lines. This problem seems to be around since APNIC switched
  to a database version supporting IPv6/RPSLng).
  Thanks to Hagen Boehm.

* ASnnn embedded in AS-Set AS-xxxx doesn't resolve properly (prefix
  loss)
  We are seeing cases where resolving to route-sets (a) an ASnnn and